syntax = "proto3";

package command;

enum OpCode {
    NoOp = 0;
    Set = 1;
    Put = 2;
    Get = 3;
};

message Command{
    OpCode op = 1;
    bytes key = 2;
    bytes value= 3;
};

